Invalidate previousLocationInBacking in LayoutObject::clearPreviousVisualRects()

clearPreviousVisualRects() is called when the object's previous visual
rects become invalid (e.g. when the object becomes composited). We
should call setMayNeedPaintInvalidationSubtree to ensure paint
invalidation checking of subtree which would be triggered by changed
location if we had valid previous location.

BUG=666267
TEST=paint/invalidation/compositing/become-composited-zero-offset.html

Review-Url: https://codereview.chromium.org/2537653002
Cr-Commit-Position: refs/heads/master@{#434894}

Former-commit-id: b4a81bdbf064377ffee45f75b8ee79eb260d9942